데이터 테이블 검색 스크립트 공통 함수 적용에 따른 뷰 수정 (app.js > init_datatable)

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -294,6 +294,11 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     cursor: pointer !important;
 }
 
+/* line-height */
+.no-line-height {
+    line-height: 0;
+}
+
 /* border */
 .border-white {
     border-color: #fff !important;
