--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -282,6 +282,10 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
 }
+.form-horizontal .input-label {
+    padding-left: 4px;
+    margin-right: 20px;
+}
 
 /* display */
 .inline-block {
