LMS > 교수, 카테고리 검색창 공통 컨트롤러로 분리 (메뉴권한 제외 처리), 기타 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -283,8 +283,11 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     border-bottom: 1px solid #ddd;
 }
 .form-horizontal .input-label {
-    padding-left: 4px;
-    margin-right: 20px;
+    padding-left: 2px;
+    margin-right: 10px;
+}
+.form-horizontal .input-label:last-child {
+    margin-right: 0;
 }
 
 /* display */
