LMS > 교수관리 > 교수 목록, 등록 소스 업데이트, 공통 검색창 소스 개선 및 헬퍼 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -228,6 +228,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
     background: #34495e !important;
     border: 1px solid #34495e !important;
 }
+.bg-info {
+    background-color: #d9edf7 !important;
+}
 .no-bgcolor {
     background: transparent;
 }
