LMS > 조인 쿼리 점검 및 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -332,13 +332,18 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .no-border {
     border: 0 !important;
 }
-.no-border-right {
-    border-right: 0 !important;
+.no-border-top {
+    border-top-width: 0 !important;
+}
+.no-border-bottom {
+    border-bottom-width: 0 !important;
 }
 .no-border-left {
-    border-left: 0 !important;
+    border-left-width: 0 !important;
 }
-
+.no-border-right {
+    border-right-width: 0 !important;
+}
 
 /* no-margin */
 .no-margin {
