LMS  게시판 공통 JS 추가  공지사항 Javascript 공톨 JS로 분리  상담게시판 공지사항 List, Write 페이지

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -237,6 +237,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .bg-odd {
     background: #f9f9f9 !important;
 }
+.bg-gray-custom {
+    background: #ababab !important;
+}
 
 /* text color */
 .gray {
