관리자 페이지 css 수정(local test)

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -95,6 +95,9 @@ body.no_sidebar {
 .nav.side-menu>li:first-child {
     margin-top: 75px;
 }
+.menu_section>ul {
+    margin-top: 0;
+}
 
 /* right_col */
 .page-title {
