관리자 페이지 css 브라우저 커스터마이징 수정(추가수정)

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -57,6 +57,9 @@ body.no_sidebar {
 .top_col .nav-tabs li.dropdown .dropdown-menu {
     margin-left: 0px;
 }
+.caret {
+    float: right; margin-top: 6px;
+}
 
 /* top_nav_fixed */
 .top_nav_fixed .top_col {
