커스텀 CSS 클래스 추가 (bg-white-only)

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -313,6 +313,9 @@ table.dataTable tbody>tr.selected, table.dataTable tbody>tr>.selected {
 .bg-gray-custom {
     background: #ababab !important;
 }
+.bg-white-only {
+    background: #fff !important;
+}
 
 /* text color */
 .gray {
