--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -180,6 +180,9 @@
 .tx-red {
     color: #ed1c24 !important;
 }
+.tx-pink {
+    color: #f14078 !important;
+}
 .tx-light-blue {
     color: #1a8ccc !important;
 }
@@ -208,6 +211,9 @@
 .bg-dark-gray {
     background: #b7b7b7;
 }
+.bg-deep-gray {
+    background: #707070;
+}
 .bg-white {
     background: #fff;
 }
@@ -217,16 +223,13 @@
 .bg-blue {
     background: #1a8ccb;
 }
-.bg-none {
-    background: none !important;
-}
 .bg-dark-blue {
     background: #0d74ae;
 }
-
-.bd-none {
-    border: none !important;
+.bg-none {
+    background: none !important;
 }
+
 .bd-dark-blue {
     border: 1px solid #0d74ae;
 }
@@ -239,6 +242,9 @@
 .bdb-black2 {
     border-bottom: 2px solid #000;
 }
+.bd-none {
+    border: none !important;
+}
 
 
 /* Login Form : 공통 */
@@ -247,7 +253,7 @@
     padding: 65px 0 100px;
 }
 .mem-Tit span {
-    font-family: "Noto Sans KR", "Malgun Gothic", "맑은 고딕";
+    font-family: "NotoSansCJKkr-Regular", "Noto Sans KR", "Malgun Gothic", "맑은 고딕";
     font-size: 24px;
     font-weight: 600;
     letter-spacing: -2px;
@@ -889,6 +895,7 @@ table.auTable tr td {
 .row-line {
     overflow: hidden;
     display: inline-block;
+    text-indent: -9999px;
 }
 .arrow-Btn {
     text-indent: -9999px;
@@ -1345,9 +1352,11 @@ table.auTable tr td {
     margin-left: 15px;
 }
 #Footer .ft-Link .row-line {
-    height: 14px;
-    line-height: 8px;
-    margin-left: 13px;
+    background: #888;
+    width: 1px;
+    height: 12px;
+    margin-top: -2px;
+    margin-left: 14px;
 }
 #Footer address {
     background: url("../../img/front/gnb/logo_footer.gif") no-repeat 0 55px;
@@ -1358,8 +1367,11 @@ table.auTable tr td {
     float: left;
 }
 #Footer address .row-line {
-    height: 14px;
-    line-height: 5px;
+    background: #888;
+    width: 1px;
+    height: 11px;
+    margin-top: -2px;
+    margin-left: 2px;
 }
 #Footer .ft-KGinicis {
     float: right;
@@ -1536,10 +1548,9 @@ table.auTable tr td {
     font-weight: 600;
 }
 .Menu .menu-Tit li .row-line {
-    color: #b7b7b7;
-    width: 3px;
+    background: #b7b7b7;
+    width: 1px;
     height: 16px;
-    line-height: 8px;
     margin: 0 10px;
 }
 .Menu .menu-List {
@@ -1572,6 +1583,7 @@ table.auTable tr td {
 .Depth {
     padding-top: 40px;
     padding-bottom: 30px;
+    letter-spacing: 0;
 }
 .Depth .depth-Arrow {
     font-size: 12px;
@@ -1677,7 +1689,7 @@ table.auTable tr td {
     font-size: 11px;
     color: #999;
     border: 1px solid #d7d7d7;
-    line-height: 19px; 
+    line-height: 20px; 
 }
 .curriWrap tr td a:hover,
 .curriWrap tr td.active a {
@@ -1894,6 +1906,31 @@ table.auTable tr td {
     font-weight: 600;
     color: #fff;
 }
+.willbes-Lec-buyBtn-sm {
+    display: none;
+    position: absolute;
+    top: 80px;
+    right: 17px;
+    width: 45px;
+}
+.willbes-Lec-buyBtn-sm.active {
+    display: block !important;
+}
+.willbes-Lec-buyBtn-sm div {
+    margin-bottom: 1px;
+}
+.willbes-Lec-buyBtn-sm button {
+    width: 45px;
+    height: 30px;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+.willbes-Lec-buyBtn-sm button span {
+    font-size: 9px;
+    font-weight: 600;
+    color: #fff;
+}
 
 /* subContainer : Content : TopBtn */
 .TopBtn {
@@ -1933,6 +1970,52 @@ table.auTable tr td {
     border-bottom: 1px solid #c9c9c9;
 }
 
+/* subContainer : Content : w-info */
+.w-info {
+    font-size: 12px;
+    font-weight: 300;
+}
+.w-info dt {
+    float: left;
+}
+.w-info dt .nBox {
+    display: inline-block;
+    width: 37px;
+    height: 15px;
+    font-size: 10px;
+    color: #fff;
+    text-align: center;
+    line-height: 15px;
+    margin: 0 1px;
+}
+.w-info dt .nBox.n1 {
+    background: #f14078;
+}
+.w-info dt .nBox.n2 {
+    background: #21abc8;
+}
+.w-info dt .nBox.n3 {
+    background: #1087ef;
+}
+.w-info dt .nBox.n4 {
+    background: #333
+}
+.w-info dt strong {
+    background: url("../../img/front/sub/icon_detail.gif") no-repeat 0 10px;
+    height: 30px;
+    padding-left: 18px;
+    display: inline-block;
+}
+.w-info span {
+    vertical-align: baseline;
+}
+.w-info .row-line {
+    background: #b5b5b5;
+    width: 1px;
+    height: 12px;
+    margin: 0 10px -3px;
+}
+
 /* subContainer : Content : lecTable */
 table.lecTable {
     font-size: 13px;
@@ -1953,53 +2036,6 @@ table.lecTable tr td .w-tit {
     color: #2c2c2c;
     letter-spacing: -1px;
 }
-
-/* subContainer : Content : w-info */
-.w-info {
-    font-size: 12px;
-    font-weight: 300;
-}
-.w-info dt {
-    float: left;
-}
-.w-info dt .nBox {
-    display: inline-block;
-    width: 37px;
-    height: 15px;
-    font-size: 10px;
-    font-weight: 600;
-    color: #fff;
-    text-align: center;
-    line-height: 13px;
-    margin: 0 1px;
-}
-.w-info dt .nBox.n1 {
-    background: #f14078;
-}
-.w-info dt .nBox.n2 {
-    background: #21abc8;
-}
-.w-info dt .nBox.n3 {
-    background: #1087ef;
-}
-.w-info dt .nBox.n4 {
-    background: #333
-}
-.w-info dt strong {
-    background: url("../../img/front/sub/icon_detail.gif") no-repeat 0 4px;
-    padding-left: 18px;
-}
-.w-info span {
-    vertical-align: baseline;
-}
-.w-info .row-line {
-    font-size: 13px;
-    color: #3a3a3a;
-    height: 20px;
-    line-height: 24px;
-    margin: 0 10px -3px;
-}
-
 table.lecTable tr td.chk {
     text-align: right;
 }
@@ -2007,13 +2043,10 @@ table.lecTable tr td.chk input[type=checkbox] {
     width: 14px;
     height: 14px;
     cursor: pointer;
-    margin-top: 50px;
-}
-table.lecTable tr td .w-sp {
-    margin-top: 40px;
-    margin-bottom: 10px;
+    margin-top: 46px;
 }
 table.lecTable tr td .priceWrap {
+    clear: both;
     position: relative;
     margin-right: 25px;
     height: 18px;
@@ -2037,11 +2070,19 @@ table.lecTable tr td .MoreBtn {
     margin-top: 10px;
     margin-right: 25px;
 }
+table.lecTable ul.w-sp {
+    float: left;
+    width: 128px;
+    margin: 40px 26px 10px;
+}
 table.lecTable ul.w-sp li {
+    float: left;
     width: 64px;
     height: 22px;
-    display: inline-block;
-    margin: 0 -3px;
+    margin-left: -1px
+}
+table.lecTable ul.w-sp li:first-child {
+    margin-left: 0;
 }
 table.lecTable ul.w-sp li a {
     display: block;
@@ -2059,6 +2100,53 @@ table.lecTable ul.w-sp li a:active {
     border-color: #898989; 
     position: relative;
     z-index: 10;  
+}
+
+/* subContainer : Content : viewBox */
+.viewBox {
+    display: none;
+    position: absolute;
+    top: 67px;
+    right: 27px;
+    z-index: 10;
+    background: #fff;
+    width: 192px;
+    border: 1px solid #2f2f2f;
+    padding: 5px 20px;
+}
+.viewBox dl {
+    float: left;
+    clear: both;
+    line-height: 20px;
+    padding: 5px 0;
+}
+.viewBox dl dt {
+    float: left;
+}
+.viewBox dl dt.Tit {
+    font-size: 11px;
+    color: #707070;
+    margin-right: 10px;
+}
+.viewBox dl dt.tBox {
+    width: 50px;
+    height: 20px;
+    margin-left: 1px;
+}
+.viewBox dl dt a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    font-size: 10px;
+    font-weight: 600;
+    color: #fff;
+    text-align: center;
+}
+.viewBox dl dt.high a {
+    background: #333;
+}
+.viewBox dl dt.low a {
+    background: #898989;
 }
 
 /* subContainer : Content : lecInfoTable */
@@ -2084,7 +2172,6 @@ table.lecInfoTable .w-sub .w-obj {
     width: 75px;
     text-align: right;
     padding-right: 10px;
-
 }
 table.lecInfoTable .w-sub .w-subtit {
     width: 500px;
@@ -2131,10 +2218,226 @@ table.lecInfoTable .w-sub .priceWrap .discount {
     width: 50px;
     color: #464646;
 }
+table.lecInfoTable .w-sub strong {
+    background: url("../../img/front/sub/icon_detail.gif") no-repeat 0 8px;
+    height: 30px;
+    padding-left: 18px;
+    display: inline-block;
+}
+
+
+
+
+
+/* subContainer : Content : willbes-Layer-Box */
+.willbes-Layer-Box {
+    background: #fff;
+    /*
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 11;
+    width: 980px;
+    height: 700px;
+    /*
+    margin-top: -350px;
+    margin-left: -490px;
+    */
+    border: 1px solid #2f2f2f;
+    padding: 20px;
+}
+.willbes-Layer-Box .closeBtn {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+}
+.willbes-Layer-Box .Layer-Tit {
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 60px;
+    letter-spacing: 0;
+    margin-bottom: 30px;
+}
+.lecDetailWrap .tabWrap {
+    height: 60px;
+    border-bottom: 1px solid #4f4f4f;
+}
+.lecDetailWrap .tabWrap li {
+    float: left;
+    width: 50%;
+    height: 60px;
+}
+.lecDetailWrap .tabWrap li a {
+    display: block;
+    width: 100%;
+    height: 59px;
+    line-height: 58px;
+    background: #f5f5f5;
+    font-size: 19px;
+    font-weight: 600;
+    color: #878787;
+    text-align: center;
+    letter-spacing: 0;
+    border-top: 1px solid #dbdbdb;
+    border-left: 1px solid #dbdbdb;
+    border-right: 1px solid #dbdbdb;
+}
+.lecDetailWrap .tabWrap li a.on {
+    background: #fff;
+    height: 60px;
+    line-height: 52px;
+    color: #3a3a3a;
+    border-top: 4px solid #4f4f4f;
+    border-left: 4px solid #4f4f4f;
+    border-right: 4px solid #4f4f4f;
+}
+
+/* subContainer : Content : 강좌정보 */
+.classInfo {
+    float: left;
+    width: 100%;
+    padding-top: 60px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #959595;
+}
+table.classTable {
+    width: 100%;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 0;
+}
+table.classTable tr td {
+    height: 100px;
+    line-height: 16px;
+    border-bottom: 1px solid #edeeef;
+}
+table.classTable tr td.w-data {
+    line-height: 20px;
+}
+
+/* subContainer : Content : 교재정보 */
+.willbes-Layer-Box .bookInfo {
+    float: left;
+    width: 100%;
+    margin-top: 60px;
+    border-top: 1px solid #959595;
+}
+.bookInfo {
+    padding-top: 30px;
+}
+.bookInfo .bookImg {
+    float: left;
+    margin: 15px 15px 0;
+}
+.bookDetail {
+    float: right;
+    width: 678px;
+}
+.bookDetail .book-Tit {
+    font-size: 18px;
+    letter-spacing: 0;
+    margin-bottom: 15px;
+}
+.bookDetail .book-Author {
+    letter-spacing: 0;
+    margin-bottom: 25px;
+}
+.bookDetail .book-Author ul {
+    height: 26px;
+    line-height: 24px;
+}
+.bookDetail .book-Author ul li {
+    float: left;
+}
+.bookDetail .book-Author ul li .row-line {
+    background: #e4e4e4;
+    width: 1px;
+    height: 10px;
+    margin: -3px 10px 0;
+}
+
+.bookBoxWrap .tabWrap {
+    height: 34px;
+    border-bottom: 1px solid #959595;
+}
+.bookBoxWrap .tabWrap li {
+    float: left;
+    width: 140px;
+    height: 34px;
+}
+.bookBoxWrap .tabWrap li a {
+    display: block;
+    width: 100%;
+    height: 33px;
+    line-height: 32px;
+    background: #f9f9f9;
+    font-size: 12px;
+    color: #959595;
+    text-align: center;
+    letter-spacing: 0;
+    border-top: 1px solid #e1e1e1;
+    border-left: 1px solid #e1e1e1;
+    border-right: 1px solid #e1e1e1;
+}
+.bookBoxWrap .tabWrap li a.on {
+    background: #fff;
+    height: 34px;
+    line-height: 32px;
+    font-weight: 600;
+    color: #686868;
+    border-top: 1px solid #959595;
+    border-left: 1px solid #959595;
+    border-right: 1px solid #959595;
+}
+
+
+
 
 /* subContainer : Content : package Price */
 .willbes-Lec-Package-Price {
+    height: 125px;
     margin-bottom: 15px;
+}
+.total-PriceBox {
+    font-size: 14px;
+    font-weight: 600;
+    height: 64px;
+    line-height: 62px;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #3a3e47;
+}
+.total-PriceBox span {
+    float: left;
+}
+.total-PriceBox .price-tit {
+    width: 135px;
+    font-size: 16px;
+    text-align: center;
+}
+.total-PriceBox .price-txt {
+    font-weight: 300;
+    padding-right: 10px;
+}
+.total-PriceBox .price-total {
+    float: right;
+    width: 200px;
+    background: #f9f9fa;
+    font-size: 23px;
+    text-align: right;
+    padding-right: 30px;
+}
+.total-PriceBox .row-line {
+    background: #e7e7e7;
+    width: 1px;
+    height: 24px;
+    margin: 21px 30px 0 0;
+}
+.total-PriceBox .price-img {
+    padding: 0 10px;
 }
 
 /* subContainer : Content : packageTable */
@@ -2213,4 +2516,21 @@ table.lecInfoTable .w-sub .priceWrap .discount {
 /* subContainer : Content : Quick-Bnr */
 .Quick-Bnr {
     float: left;
+}
+
+
+
+
+
+
+
+
+/* Only IE Hack */
+/* IE7, IE8, IE9 */
+#SettingForm .chkBox-Save strong {
+    letter-spacing: -2px \0;
+}
+/* IE10 and IE11 */
+@media screen and (-ms-high-contrast:active), (-ms-high-contrast:none) {
+    #SettingForm .chkBox-Save strong {letter-spacing: -2px;}
 }
