--- a/public/css/front/basic.css
+++ b/public/css/front/basic.css
@@ -283,3 +283,268 @@ strong {
 .NG {
 	font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif";
 }
+
+
+/* Basic Code */
+.widthAuto {
+  width: 1120px; 
+  margin: 0 auto;
+}
+.widthAuto320 {
+  width: 320px;
+  margin: 0 auto;
+}
+.widthAuto460 {
+  width: 460px;
+  margin: 0 auto;
+}
+.widthAuto550 {
+  width: 550px;
+  margin: 0 auto;
+}
+.widthAuto560 {
+  width: 560px;
+  margin: 0 auto;
+}
+.widthAuto690 {
+  width: 690px;
+  margin: 0 auto;
+}
+.widthAuto770 {
+  width: 770px;
+  margin: 0 auto;
+}
+
+.btnAuto {
+  width: 100%;
+  margin: 0 auto;
+}
+.btnAuto120 {
+  width: 120px;
+  margin: 0 auto;
+}
+.btnAuto130 {
+  width: 130px;
+  margin: 0 auto;
+}
+.btnAuto164 {
+  width: 164px;
+  margin: 0 auto;
+}
+.btnAuto180 {
+  width: 180px !important;
+  margin: 0 auto;
+}
+.h36 {
+  height: 36px !important;
+}
+.h66 {
+  height: 66px !important;
+}
+
+.mt10 {
+  margin-top: 10px !important;
+}
+.mt20 {
+  margin-top: 20px !important;
+}
+.mt30 {
+  margin-top: 30px !important;
+}
+.mt40 {
+  margin-top: 40px !important;
+}
+.mt50 {
+  margin-top: 50px !important;
+}
+.mt60 {
+  margin-top: 60px !important;
+}
+.mt70 {
+  margin-top: 70px !important;
+}
+
+.mb10 {
+  margin-bottom: 10px !important;
+}
+.mb20 {
+  margin-bottom: 20px !important;
+}
+.mb30 {
+  margin-bottom: 30px !important;
+}
+.mb40 {
+  margin-bottom: 40px !important;
+}
+.mb50 {
+  margin-bottom: 50px !important;
+}
+.mb60 {
+  margin-bottom: 60px !important;
+}
+.mb70 {
+  margin-bottom: 70px !important;
+}
+
+.ml5 {
+  margin-left: 5px !important;
+}
+.ml10 {
+  margin-left: 10px !important;
+}
+.ml15 {
+  margin-left: 15px !important;
+}
+.ml20 {
+  margin-left: 20px !important;
+}
+
+.mr5 {
+  margin-right: 5px !important;
+}
+.mr10 {
+  margin-right: 10px !important;
+}
+.mr15 {
+  margin-right: 15px !important;
+}
+.mr20 {
+  margin-right: 20px !important;
+}
+
+.pt30 {
+  padding-top: 30px !important;
+}
+.pl20 {
+  padding-left: 20px !important;
+}
+.pl25 {
+  padding-left: 25px !important;
+}
+.pl30 {
+  padding-left: 30px !important;
+}
+
+.tx11 {
+  font-size: 11px;
+}
+.tx12 {
+  font-size: 12px;
+}
+.tx13 {
+  font-size: 13px;
+}
+.tx14 {
+  font-size: 14px;
+}
+
+.tx-center {
+  text-align: center !important;
+}
+.tx-left {
+  text-align: left !important;
+}
+.tx-right {
+  text-align: right !important;
+}
+
+.valign-base {
+  vertical-align: baseline;
+}
+.p_re {
+  position: relative;
+}
+.p_ab {
+  position: absolute;
+}
+
+.d_block {
+  display: block !important;
+}
+
+.d_none {
+  display: none !important;
+}
+
+.c_both {
+  clear: both
+}
+
+.tx-red {
+  color: #ed1c24 !important;
+}
+.tx-pink {
+  color: #f14078 !important;
+}
+.tx-light-blue {
+  color: #1a8ccc !important;
+}
+.tx-blue {
+  color: #0d74ae !important;
+} 
+.tx-dark-blue {
+  color: #003e7d !important;
+}
+.tx-gray {
+  color: #707070 !important;
+}
+.tx-black {
+  color: #323232 !important;
+}
+.tx-dark-black {
+  color: #363636 !important
+}
+
+.bg-light-gray {
+  background: #f5f5f5;
+}
+.bg-gray {
+  background: #eaeaea;
+}
+.bg-dark-gray {
+  background: #b7b7b7;
+}
+.bg-deep-gray {
+  background: #707070;
+}
+.bg-white {
+  background: #fff;
+}
+.bg-light-white {
+  background: #f9f9f9;
+}
+.bg-blue {
+  background: #1a8ccb;
+}
+.bg-dark-blue {
+  background: #0d74ae;
+}
+.bg-none {
+  background: none !important;
+}
+
+.bd-dark-blue {
+  border: 1px solid #0d74ae;
+}
+.bd-gray {
+  border: 1px solid #939393;
+}
+.bdt-light-gray {
+  border-top: 1px solid #e2e2e2;
+}
+.bdb-black2 {
+  border-bottom: 2px solid #000;
+}
+.bd-none {
+  border: none !important;
+}
+
+.row-line {
+  overflow: hidden;
+  display: inline-block;
+  text-indent: -9999px;
+}
+.arrow-Btn {
+  text-indent: -9999px;
+  display: inline-block;
+}
