--- a/public/css/front/style.css
+++ b/public/css/front/style.css
@@ -1,255 +1,3 @@
-/* Basic Code */
-.widthAuto {
-    width: 1120px; 
-    margin: 0 auto;
-}
-.widthAuto320 {
-    width: 320px;
-    margin: 0 auto;
-}
-.widthAuto460 {
-    width: 460px;
-    margin: 0 auto;
-}
-.widthAuto550 {
-    width: 550px;
-    margin: 0 auto;
-}
-.widthAuto560 {
-    width: 560px;
-    margin: 0 auto;
-}
-.widthAuto690 {
-    width: 690px;
-    margin: 0 auto;
-}
-.widthAuto770 {
-    width: 770px;
-    margin: 0 auto;
-}
-
-.btnAuto {
-    width: 100%;
-    margin: 0 auto;
-}
-.btnAuto120 {
-    width: 120px;
-    margin: 0 auto;
-}
-.btnAuto130 {
-    width: 130px;
-    margin: 0 auto;
-}
-.btnAuto164 {
-    width: 164px;
-    margin: 0 auto;
-}
-.btnAuto180 {
-    width: 180px !important;
-    margin: 0 auto;
-}
-.h36 {
-    height: 36px !important;
-}
-.h66 {
-    height: 66px !important;
-}
-
-.mt10 {
-    margin-top: 10px !important;
-}
-.mt20 {
-    margin-top: 20px !important;
-}
-.mt30 {
-    margin-top: 30px !important;
-}
-.mt40 {
-    margin-top: 40px !important;
-}
-.mt50 {
-    margin-top: 50px !important;
-}
-.mt60 {
-    margin-top: 60px !important;
-}
-.mt70 {
-    margin-top: 70px !important;
-}
-
-.mb10 {
-    margin-bottom: 10px !important;
-}
-.mb20 {
-    margin-bottom: 20px !important;
-}
-.mb30 {
-    margin-bottom: 30px !important;
-}
-.mb40 {
-    margin-bottom: 40px !important;
-}
-.mb50 {
-    margin-bottom: 50px !important;
-}
-.mb60 {
-    margin-bottom: 60px !important;
-}
-.mb70 {
-    margin-bottom: 70px !important;
-}
-
-.ml5 {
-    margin-left: 5px !important;
-}
-.ml10 {
-    margin-left: 10px !important;
-}
-.ml15 {
-    margin-left: 15px !important;
-}
-.ml20 {
-    margin-left: 20px !important;
-}
-
-.mr5 {
-    margin-right: 5px !important;
-}
-.mr10 {
-    margin-right: 10px !important;
-}
-.mr15 {
-    margin-right: 15px !important;
-}
-.mr20 {
-    margin-right: 20px !important;
-}
-
-.pt30 {
-    padding-top: 30px !important;
-}
-.pl20 {
-    padding-left: 20px !important;
-}
-.pl25 {
-    padding-left: 25px !important;
-}
-
-.tx11 {
-    font-size: 11px;
-}
-.tx12 {
-    font-size: 12px;
-}
-.tx13 {
-    font-size: 13px;
-}
-.tx14 {
-    font-size: 14px;
-}
-
-.tx-center {
-    text-align: center !important;
-}
-.tx-left {
-    text-align: left !important;
-}
-.tx-right {
-    text-align: right !important;
-}
-
-.valign-base {
-    vertical-align: baseline;
-}
-.p_re {
-    position: relative;
-}
-.p_ab {
-    position: absolute;
-}
-
-.d_block {
-    display: block !important;
-}
-
-.d_none {
-    display: none !important;
-}
-
-.c_both {
-    clear: both
-}
-
-.tx-red {
-    color: #ed1c24 !important;
-}
-.tx-pink {
-    color: #f14078 !important;
-}
-.tx-light-blue {
-    color: #1a8ccc !important;
-}
-.tx-blue {
-    color: #0d74ae !important;
-} 
-.tx-dark-blue {
-    color: #003e7d !important;
-}
-.tx-gray {
-    color: #707070 !important;
-}
-.tx-black {
-    color: #323232 !important;
-}
-.tx-dark-black {
-    color: #363636 !important
-}
-
-.bg-light-gray {
-    background: #f5f5f5;
-}
-.bg-gray {
-    background: #eaeaea;
-}
-.bg-dark-gray {
-    background: #b7b7b7;
-}
-.bg-deep-gray {
-    background: #707070;
-}
-.bg-white {
-    background: #fff;
-}
-.bg-light-white {
-    background: #f9f9f9;
-}
-.bg-blue {
-    background: #1a8ccb;
-}
-.bg-dark-blue {
-    background: #0d74ae;
-}
-.bg-none {
-    background: none !important;
-}
-
-.bd-dark-blue {
-    border: 1px solid #0d74ae;
-}
-.bd-gray {
-    border: 1px solid #939393;
-}
-.bdt-light-gray {
-    border-top: 1px solid #e2e2e2;
-}
-.bdb-black2 {
-    border-bottom: 2px solid #000;
-}
-.bd-none {
-    border: none !important;
-}
-
-
 /* Login Form : 공통 */
 .mem-Tit {
     text-align: center;
@@ -434,7 +182,6 @@
     color: #323232;
     border-bottom: 5px solid #0d74ae;
 }
-
 
 /* Login Form : 로그인 */
 .mem-Login button.mem-Btn {
@@ -729,7 +476,6 @@ table.combineTable .addbox2 {
     color: #707070;
     height: 55px;
     line-height: 55px;
-
 }
 .agree-Chk ul li:first-child {
     border-top: 1px solid #e2e2e2;
@@ -893,17 +639,7 @@ table.auTable tr td {
 
 
 
-
-/* Basic Code */
-.row-line {
-    overflow: hidden;
-    display: inline-block;
-    text-indent: -9999px;
-}
-.arrow-Btn {
-    text-indent: -9999px;
-    display: inline-block;
-}
+/*********************************************     MAIN PAGE     *********************************************/
 
 /* Gnb */
 #Gnb {
@@ -1195,7 +931,6 @@ table.auTable tr td {
     vertical-align: baseline;
 }
 
-
 /* Layer-Box 공통 */
 .Layer-Box {
     z-index: 9999;
@@ -1338,7 +1073,6 @@ table.auTable tr td {
     color: #fff;
 }
 
-
 /* Footer */
 #Footer {
     height: 180px;
@@ -1380,7 +1114,6 @@ table.auTable tr td {
     float: right;
     margin-top: 48px;
 }
-
 
 /* Main Container */
 #Container {
@@ -1515,6 +1248,7 @@ table.auTable tr td {
 
 
 
+/*********************************************     CONTAINER PAGE     *********************************************/
 
 /* subContainer */
 .subContainer {
@@ -1609,14 +1343,15 @@ table.auTable tr td {
 
 
 
+/*********************************************     CONTENT PAGE     *********************************************/
+
 /* subContainer : Content */
 .Content {
     float: left;
     width: 940px;
 }
-
 .subBtn {
-    height: 22px;
+    height: 18px;
 }
 .subBtn a {
     background: #7d7e85;
@@ -1626,7 +1361,6 @@ table.auTable tr td {
     color: #fff;
     padding: 4px 10px
 }
-
 
 /* subContainer : Content : curriWrap */
 .curriWrap .curriTabs {
@@ -1954,7 +1688,7 @@ table.auTable tr td {
     line-height: 45px;
     border-bottom: 1px solid #959595;
     padding-left: 10px;
-    margin-top: 100px;
+    padding-top: 80px;
 }
 
 /* subContainer : Content : TopBtn */
@@ -1997,6 +1731,7 @@ table.auTable tr td {
 
 /* subContainer : Content : w-info */
 .w-info {
+    clear: both;
     font-size: 12px;
     font-weight: 300;
 }
@@ -2039,6 +1774,14 @@ table.auTable tr td {
     width: 1px;
     height: 12px;
     margin: 0 10px -3px;
+}
+.w-info .w-name {
+    font-size: 14px;
+    color: #2c2c2c;
+}
+
+.w-info .w-tit {
+    letter-spacing: 0 !important;
 }
 
 /* subContainer : Content : lecTable */
@@ -2088,18 +1831,19 @@ table.lecTable tr td .priceWrap .discount {
     color: #464646;
 }
 table.lecTable tr td .MoreBtn {
-    float: right;
+    position: absolute;
+    bottom: 5px;
+    right: 25px;
     font-size: 11px;
     color: #808080;
     line-height: 18px;
-    margin-top: 10px;
-    margin-right: 25px;
 }
 
+/* subContainer : Content : w-sp */
 .w-sp {
     float: left;
     width: 128px;
-    margin: 40px 26px 10px;
+    margin: 10px 26px;
 }
 .w-sp li {
     float: left;
@@ -2154,7 +1898,6 @@ table.lecTable tr td .MoreBtn {
     color: #707070;
     margin-right: 10px;
 }
-
 .tBox {
     display: inline-block;
     width: 50px;
@@ -2315,17 +2058,24 @@ table.lecTable tr td .MoreBtn {
     border-left: 4px solid #4f4f4f;
     border-right: 4px solid #4f4f4f;
 }
+.willbes-Layer-Box.d2 .Layer-Tit {
+    margin-bottom: 0;
+    border-bottom: 2px solid #000;
+}
+.willbes-Layer-Box.d2 .classInfo {
+    padding-top: 20px;
+}
 
-/* subContainer : Content : 강좌상세정보 */
+/* subContainer : Content : 단강좌상세정보 */
 .willbes-Prof-Detail {
     background: #f4f5f6;
     height: 294px;
     letter-spacing: 1px;
 }
-
 .prof-profile {
     float: left;
     width: 490px;
+    height: 294px;
 }
 .prof-profile .Obj {
     position: absolute;
@@ -2347,9 +2097,15 @@ table.lecTable tr td .MoreBtn {
     position: absolute;
     right: 0;
 }
+.prof-profile .prof-home {
+    position: absolute;
+    bottom: 30px;
+    left: 60px;
+}
 .lec-profile {
     float: right;
     width: 410px;
+    height: 294px;
 }
 .lec-profile .w-list {
     font-size: 14px;
@@ -2363,6 +2119,28 @@ table.lecTable tr td .MoreBtn {
 .lec-profile .w-info {
     margin-top: 20px;
 }
+.lec-profile .all-view {
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+}
+.lec-profile .w-notice {
+    position: absolute;
+    bottom: 30px;
+    right: 60px;
+    letter-spacing: -1px;
+}
+.lec-profile .w-notice .w-sp {
+    margin: 0;
+}
+.lec-profile .w-notice .w-sp li {
+    background: #fff;
+    text-align: center;
+}
+.lec-profile .w-notice .viewBox {
+    top: 21px;
+    right:1px;
+}
 
 /* subContainer : Content : willbes-Buy-Table */
 .willbes-Buy-Table {
@@ -2374,35 +2152,37 @@ table.lecTable tr td .MoreBtn {
     float: left;
     width: 710px;
 }
-.willbes-Buy-Table table.lecTable {
+.willbes-Buy-List table.lecTable {
     display: block;
     border-bottom: 1px solid #e7e7e7;
     padding: 20px 0;
 }
-.willbes-Buy-Table table.lecTable tr td {
+.willbes-Buy-List table.lecTable tr td {
     height: 30px;
+    padding-right: 15px;
 }
-.willbes-Buy-Table table.lecTable .w-lectit {
+.willbes-Buy-List table.lecTable .w-lectit {
     padding-left: 10px;
 }
-.willbes-Buy-Table table.lecTable .w-obj {
+.willbes-Buy-List table.lecTable .w-obj {
     float: left;
     line-height: 13px;
     text-align: center;
     margin-right: 15px;
 }
-.willbes-Buy-Table table.lecTable .MoreBtn {
+.willbes-Buy-List table.lecTable .MoreBtn {
     float: inherit;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
 }
-
-.willbes-Buy-Table table.lecTable .w-data {
+.willbes-Buy-List table.lecTable .w-data {
     padding-left: 10px;
 }
-
-.willbes-Buy-Table table.lecTable tr td.chk input[type=checkbox] {
+.willbes-Buy-List table.lecTable tr td.chk input[type=checkbox] {
     margin-top: 2px;
 }
-
 .willbes-Buy-Price {
     float: right;
     width: 230px;
@@ -2415,9 +2195,6 @@ table.lecTable tr td .MoreBtn {
     line-height: 40px;
     border-bottom: 1px solid #959595;
 }
-
-
-
 .willbes-Buy-Price tbody tr td {
     font-size: 14px;
     line-height: 40px;
@@ -2431,12 +2208,7 @@ table.lecTable tr td .MoreBtn {
     line-height: 110px;
     padding-right: 35px;
     border-bottom: none;
-
 }
-
-
-
-
 .willbes-Buy-Table .lecInfoTable {
     padding: 20px 0 20px 10px;
 }
@@ -2467,7 +2239,6 @@ table.lecTable tr td .MoreBtn {
 .willbes-Buy-Table .lecInfoTable .priceWrap {
     margin-right: 0;
 }
-
 .willbes-Buy-Table .willbes-Lec-buyBtn {
     bottom: -60px;
 }
@@ -2484,6 +2255,36 @@ table.lecTable tr td .MoreBtn {
     margin-right: 30px;
 }
 
+/* subContainer : Content : 강좌 sticky menu */
+.sticky-menu {
+    background: #fff;
+    height: 45px;
+    padding: 13px 35px;
+    border: 1px solid #dbdbdb;
+}
+.sticky-menu ul li {
+    float: left;
+}
+.sticky-menu ul li a {
+    font-size: 14px;
+    color: #3a3a3a;
+}
+.sticky-menu ul li.row-line {
+    background: #e4e4e4;
+    width: 1px;
+    height: 11px;
+    margin: 3px 40px;
+}
+.sticky-menu.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    right: 180px;
+    width: 940px;
+    margin: 0 auto;
+}
+
 /* subContainer : Content : 강좌정보 */
 .classInfo {
     float: left;
@@ -2491,6 +2292,8 @@ table.lecTable tr td .MoreBtn {
     padding-top: 60px;
     padding-bottom: 20px;
     border-bottom: 1px solid #959595;
+    color: #3a3a3a;
+    letter-spacing: 1px;
 }
 table.classTable {
     width: 100%;
@@ -2621,8 +2424,6 @@ table.classTable tr td.w-data {
     margin: 0;
 }
 
-
-
 /* subContainer : Content : 수강후기 */
 .willbes-LecreplyList {
     height: 50px;
@@ -2640,9 +2441,6 @@ table.classTable tr td.w-data {
     display: inline-block;
     line-height: 20px;
 }
-
-
-.ReplylistTable {}
 .w-reply-teaser {
     width: 940px;
     border-bottom: 1px solid #edeeef;
@@ -2671,7 +2469,6 @@ table.classTable tr td.w-data {
 .w-reply-teaser .w-date {
     width: 105px;
 }
-.w-reply-teaser .w-star {}
 .w-reply-teaser .w-subtit {
     font-weight: 600;
     line-height: 35px;
@@ -2684,10 +2481,11 @@ table.classTable tr td.w-data {
     overflow-y: auto;
     border-bottom: 1px solid #edeeef;
     padding: 30px 15px;
-
 }
 
 
+
+/*********************************************     PACKAGE PAGE     *********************************************/
 
 /* subContainer : Content : package Price */
 .willbes-Lec-Package-Price {
@@ -2805,11 +2603,55 @@ table.classTable tr td.w-data {
     right: 30px;
 }
 
+/* subContainer : Content : packageDetailTable */
+.packageDetailTable {
+    background: #f4f5f6;
+    height: 130px;
+}
+.packageDetailTable td {
+    line-height: 40px;
+}
+.packageDetailTable .w-list {
+    font-size: 18px;
+    font-weight: 600;
+}
+.packageDetailTable .w-line .row-line {
+    background: #e7e7e7;
+    width: 1px;
+    height: 100px;
+}
+.packageDetailTable .w-tit {
+    font-size: 20px;
+    font-weight: 600;
+}
+.willbes-Buy-PackageList {
+    width: 940px;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #e7e7e7;
+}
+.willbes-Buy-PackageList table.lecTable {
+    background: #f9f9fa;
+    border-bottom: none;
+}
+.willbes-Buy-PackageList table.lecTable .w-lectit {
+    padding-left: 20px;
+}
+.willbes-Buy-PackageList table.lecTable .w-data {
+    padding-left: 20px;
+}
+.willbes-Buy-PackageList table.lecTable .w-notice {
+    padding-right: 20px;
+}
+.willbes-Buy-PackageList table.lecTable .priceWrap {
+    margin-right: 0;
+}
+
+
+
 /* subContainer : Content : Quick-Bnr */
 .Quick-Bnr {
     float: left;
 }
-
 
 
 
